log/build_2026-05-10_18-16-33/dxl_wt_openarm_leader/stdout_stderr.log
Consolidate compiler generated dependencies of target read_write_wt_position_node
[ 50%] Built target pub_current_node
[ 75%] Building CXX object CMakeFiles/read_write_wt_position_node.dir/src/read_write_wt_position_node.cpp.o
In file included from /home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:47:
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/include/read_write_wt_position_node.hpp:84:45: error: invalid use of non-static data member ‘ReadWriteWTNode::READ_PERIOD_MS’
   84 |   static constexpr double READ_PERIOD_SEC = READ_PERIOD_MS / 1000.0;
      |                                             ^~~~~~~~~~~~~~
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/include/read_write_wt_position_node.hpp:83:7: note: declared here
   83 |   int READ_PERIOD_MS = 10;
      |       ^~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/read_write_wt_position_node.dir/build.make:76: CMakeFiles/read_write_wt_position_node.dir/src/read_write_wt_position_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:139: CMakeFiles/read_write_wt_position_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
